manifests/deployIstio.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    sidecar.istio.io/status: injected-version-root@881c9704f303-0.2.9-48ce32e6909d120a8ecee58b6b7a84094da36b7c
  creationTimestamp: null
  name: loyalty-level-v2
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        sidecar.istio.io/status: injected-version-root@881c9704f303-0.2.9-48ce32e6909d120a8ecee58b6b7a84094da36b7c
      creationTimestamp: null
      labels:
        app: loyalty-level
        version: v2
    spec:
      containers:
      - env:
        - name: TWITTER_CONSUMER_KEY
          valueFrom:
            secretKeyRef:
              key: consumerKey
              name: twitter
        - name: TWITTER_CONSUMER_SECRET
          valueFrom:
            secretKeyRef:
              key: consumerSecret
              name: twitter
        - name: TWITTER_ACCESS_TOKEN
          valueFrom:
            secretKeyRef:
              key: accessToken
              name: twitter
        - name: TWITTER_ACCESS_TOKEN_SECRET
          valueFrom:
            secretKeyRef:
              key: accessTokenSecret
              name: twitter
        image: loyalty-level-v2:latest
        imagePullPolicy: Always
        name: loyalty-level
        ports:
        - containerPort: 9080
        resources: {}
      - args:
        - proxy
        - sidecar
        - -v
        - "2"
        - --configPath
        - /etc/istio/proxy
        - --binaryPath
        - /usr/local/bin/envoy
        - --serviceCluster
        - loyalty-level
        - --drainDuration
        - 45s
        - --parentShutdownDuration
        - 1m0s
        - --discoveryAddress
        - istio-pilot.default:8080
        - --discoveryRefreshDelay
        - 1s
        - --zipkinAddress
        - istio-zipkin.default:9411
        - --connectTimeout
        - 10s
        - --statsdUdpAddress
        - istio-mixer.default:9125
        - --proxyAdminPort
        - "15000"
        image: docker.io/istio/proxy_debug:0.2.9
        imagePullPolicy: IfNotPresent
        name: istio-proxy
        resources: {}
        securityContext:
          privileged: true
          readOnlyRootFilesystem: false
          runAsUser: 1337
        volumeMounts:
        - mountPath: /etc/istio/proxy
          name: istio-envoy
        - mountPath: /etc/certs/
          name: istio-certs
          readOnly: true
      volumes:
      - emptyDir:
          medium: Memory
          sizeLimit: "0"
        name: istio-envoy
      - name: istio-certs
        secret:
          optional: true
          secretName: istio.default
status: {}
---
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: loyalty-level-service
  labels:
    app: loyalty-level
spec:
  type: NodePort
  ports:
    - port: 9080
#     nodePort: 31003
  selector:
    app: loyalty-level
---
#Configure the ingress 
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
# annotations:
#   ingress.kubernetes.io/rewrite-target: /loyalty-level
  name: loyalty-level-ingress
spec:
  rules:
  - http:
      paths:
      - path: /loyalty-level
        backend:
          serviceName: loyalty-level-service
          servicePort: 9080
---
